# chainguard-analytics

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: dashboard.py
data/: account_lifecycle_events.csv  user_engagement_metrics.csv
data/preprocessed/: pp_report.csv
data/profiles/: ale_report.html  sih_report.html  uem_report.html
models/: config.json  feature_columns.json  xgb_churn.json
models/_drill_d_dryrun/: feature_columns.json
notebooks/: eda.ipynb  pipeline.ipynb  test_api.ipynb
src/: _validation.py  agent.py  api.py  config.py  constants.py  features.py  predict.py  preprocessing.py  realtime.py
